# course3

./: CMakeLists.txt  README.md  arithmetic.c  arithmetic.h  gamedata.h  initial.c  initial.h  main.c  main.h  store.c  store.h
SDL2/SDL2-2.0.22/x86_64-w64-mingw32/include/SDL2/: SDL_main.h  SDL_opengles2_gl2.h  SDL_opengles2_gl2ext.h
begintest/: CMakeLists.txt  begintest.c
